odt2mediawiki/src/main/java/haui/office/wiki/parser/MediaWikiParser.java
/* Generated By:JavaCC: Do not edit this line. MediaWikiParser.java */
package haui.office.wiki.parser;

import java.util.ArrayList;

public class MediaWikiParser extends MediaWikiParserBase implements MediaWikiParserConstants {
        private ArrayList<Token> lineBuffer = new ArrayList<Token>();

  final public void table() throws ParseException {
    jj_consume_token(TABLE_BEGIN);
                       push("table");
    rowAttributes();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TABLE_ROW:
      case TABLE_HEAD_I:
      case TABLE_CELL_I:
      case TABLE_CAPTION:
      case TABLE_CELL:
      case TABLE_HEAD:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TABLE_CAPTION:
        jj_consume_token(TABLE_CAPTION);
                                 push("caption");
        wikiLineContents();
        eol();
                                                                              pop("caption");
        wikiCellText();
        break;
      case TABLE_ROW:
        jj_consume_token(TABLE_ROW);
                             popExcluding("table"); push("row");
        rowAttributes();
        break;
      case TABLE_HEAD_I:
      case TABLE_CELL_I:
      case TABLE_CELL:
      case TABLE_HEAD:
        tableCell();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TABLE_END:
      jj_consume_token(TABLE_END);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                               pop("table");
  }

  final public void tableCell() throws ParseException {
    tableLine();
    eol();
    wikiCellText();
  }

  final public void tableLine() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TABLE_HEAD_I:
    case TABLE_CELL_I:
      tableLineHead();
      tableInlineCell();
      break;
    case TABLE_CELL:
    case TABLE_HEAD:
      tableCellSeparator();
      cellText();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TABLE_CELL:
      case TABLE_HEAD:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      tableCellSeparator();
      tableInlineCell();
    }
  }

  final public void tableInlineCell() throws ParseException {
    if (jj_2_1(2147483647)) {
      attributes();
      jj_consume_token(PIPE);
      cellText();
    } else {
      cellText();
    }
  }

  final public Token paragraphClasses() throws ParseException {
        Token r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TABLE_BEGIN:
      r = jj_consume_token(TABLE_BEGIN);
      break;
    case TABLE_ROW:
    case TABLE_HEAD_I:
    case TABLE_CELL_I:
    case TABLE_CAPTION:
    case TABLE_CELL:
    case TABLE_HEAD:
      r = tableContentClasses();
      break;
    case TABLE_END:
      r = jj_consume_token(TABLE_END);
      break;
    case HEADING_START:
      r = jj_consume_token(HEADING_START);
      break;
    case PRE:
      r = jj_consume_token(PRE);
      break;
    case BULLET:
    case HASH:
    case INDENT:
      r = listClasses();
      break;
    case PARAGRAPH_TEXT:
    case LINE_TEXT:
    case OPEN_WIKI_LINK_RAW:
    case OPEN_WIKI_LINK:
    case OPEN_EXTERNAL_LINK:
    case CLOSE_WIKI_LINK:
    case CLOSE_EXTERNAL_LINK:
    case OPEN_PENTUPLE_CURLY:
    case OPEN_TEMPLATE4:
    case OPEN_TEMPLATE_VAR:
    case OPEN_TEMPLATE2:
    case CLOSE_PENTUPLE_CURLY:
    case CLOSE_TEMPLATE4:
    case CLOSE_TEMPLATE_VAR:
    case CLOSE_TEMPLATE2:
    case BOLD_ITALICS:
    case BOLD:
    case ITALICS:
    case BEGIN_EXTENSION:
    case END_EXTENSION:
    case BEGIN_COMMENT:
    case URL:
    case HEADING_END:
    case PIPE:
    case COMMENT_TEXT:
    case END_COMMENT:
    case EXTENSION_NAME:
    case EXTENSION_ASSIGN:
    case EXTENSION_VALUE:
    case EXTENSION_SPACE:
    case EXTENSION_CLOSE:
    case EXTENSION_CANCEL:
    case APOSTROHE_TEXT:
      r = textClasses();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Token tableContentClasses() throws ParseException {
        Token r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TABLE_CAPTION:
      r = jj_consume_token(TABLE_CAPTION);
      break;
    case TABLE_ROW:
      r = jj_consume_token(TABLE_ROW);
      break;
    case TABLE_HEAD:
      r = jj_consume_token(TABLE_HEAD);
      break;
    case TABLE_HEAD_I:
      r = jj_consume_token(TABLE_HEAD_I);
      break;
    case TABLE_CELL:
      r = jj_consume_token(TABLE_CELL);
      break;
    case TABLE_CELL_I:
      r = jj_consume_token(TABLE_CELL_I);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Token listClasses() throws ParseException {
        Token r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BULLET:
      r = jj_consume_token(BULLET);
      break;
    case HASH:
      r = jj_consume_token(HASH);
      break;
    case INDENT:
      r = jj_consume_token(INDENT);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public void attributes() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LINE_TEXT:
      case OPEN_WIKI_LINK_RAW:
      case OPEN_WIKI_LINK:
      case OPEN_EXTERNAL_LINK:
      case CLOSE_WIKI_LINK:
      case CLOSE_EXTERNAL_LINK:
      case OPEN_PENTUPLE_CURLY:
      case OPEN_TEMPLATE4:
      case OPEN_TEMPLATE_VAR:
      case OPEN_TEMPLATE2:
      case CLOSE_PENTUPLE_CURLY:
      case CLOSE_TEMPLATE4:
      case CLOSE_TEMPLATE_VAR:
      case CLOSE_TEMPLATE2:
      case BOLD_ITALICS:
      case BOLD:
      case ITALICS:
      case BEGIN_EXTENSION:
      case END_EXTENSION:
      case BEGIN_COMMENT:
      case URL:
      case HEADING_END:
      case COMMENT_TEXT:
      case END_COMMENT:
      case EXTENSION_NAME:
      case EXTENSION_ASSIGN:
      case EXTENSION_VALUE:
      case EXTENSION_SPACE:
      case EXTENSION_CLOSE:
      case EXTENSION_CANCEL:
      case APOSTROHE_TEXT:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      attributeContentClasses();
    }
  }

  final public void rowAttributes() throws ParseException {
        Token n, v;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATTRIBUTE_NAME:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      n = jj_consume_token(ATTRIBUTE_NAME);
                            push("attribute"); set("name", n.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        v = jj_consume_token(ATTRIBUTE_VALUE);
                                     set("value", v.image.substring(1, v.image.length() - 1));
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
         pop();
    }
  }

  final public Token textClasses() throws ParseException {
        Token r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PARAGRAPH_TEXT:
      r = jj_consume_token(PARAGRAPH_TEXT);
      break;
    case LINE_TEXT:
    case OPEN_WIKI_LINK_RAW:
    case OPEN_WIKI_LINK:
    case OPEN_EXTERNAL_LINK:
    case CLOSE_WIKI_LINK:
    case CLOSE_EXTERNAL_LINK:
    case OPEN_PENTUPLE_CURLY:
    case OPEN_TEMPLATE4:
    case OPEN_TEMPLATE_VAR:
    case OPEN_TEMPLATE2:
    case CLOSE_PENTUPLE_CURLY:
    case CLOSE_TEMPLATE4:
    case CLOSE_TEMPLATE_VAR:
    case CLOSE_TEMPLATE2:
    case BOLD_ITALICS:
    case BOLD:
    case ITALICS:
    case BEGIN_EXTENSION:
    case END_EXTENSION:
    case BEGIN_COMMENT:
    case URL:
    case HEADING_END:
    case PIPE:
    case COMMENT_TEXT:
    case END_COMMENT:
    case EXTENSION_NAME:
    case EXTENSION_ASSIGN:
    case EXTENSION_VALUE:
    case EXTENSION_SPACE:
    case EXTENSION_CLOSE:
    case EXTENSION_CANCEL:
    case APOSTROHE_TEXT:
      r = textContentClasses();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Token textContentClasses() throws ParseException {
        Token r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LINE_TEXT:
    case OPEN_WIKI_LINK_RAW:
    case OPEN_WIKI_LINK:
    case OPEN_EXTERNAL_LINK:
    case CLOSE_WIKI_LINK:
    case CLOSE_EXTERNAL_LINK:
    case OPEN_PENTUPLE_CURLY:
    case OPEN_TEMPLATE4:
    case OPEN_TEMPLATE_VAR:
    case OPEN_TEMPLATE2:
    case CLOSE_PENTUPLE_CURLY:
    case CLOSE_TEMPLATE4:
    case CLOSE_TEMPLATE_VAR:
    case CLOSE_TEMPLATE2:
    case BOLD_ITALICS:
    case BOLD:
    case ITALICS:
    case BEGIN_EXTENSION:
    case END_EXTENSION:
    case BEGIN_COMMENT:
    case URL:
    case HEADING_END:
    case COMMENT_TEXT:
    case END_COMMENT:
    case EXTENSION_NAME:
    case EXTENSION_ASSIGN:
    case EXTENSION_VALUE:
    case EXTENSION_SPACE:
    case EXTENSION_CLOSE:
    case EXTENSION_CANCEL:
    case APOSTROHE_TEXT:
      r = attributeContentClasses();
      break;
    case PIPE:
      r = attributeSeparator();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Token attributeContentClasses() throws ParseException {
        Token r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LINE_TEXT:
      r = jj_consume_token(LINE_TEXT);
      break;
    case URL:
      r = jj_consume_token(URL);
      break;
    case OPEN_WIKI_LINK_RAW:
      r = jj_consume_token(OPEN_WIKI_LINK_RAW);
      break;
    case OPEN_WIKI_LINK:
      r = jj_consume_token(OPEN_WIKI_LINK);
      break;
    case OPEN_EXTERNAL_LINK:
      r = jj_consume_token(OPEN_EXTERNAL_LINK);
      break;
    case CLOSE_WIKI_LINK:
      r = jj_consume_token(CLOSE_WIKI_LINK);
      break;
    case CLOSE_EXTERNAL_LINK:
      r = jj_consume_token(CLOSE_EXTERNAL_LINK);
      break;
    case OPEN_PENTUPLE_CURLY:
      r = jj_consume_token(OPEN_PENTUPLE_CURLY);
      break;
    case OPEN_TEMPLATE4:
      r = jj_consume_token(OPEN_TEMPLATE4);
      break;
    case OPEN_TEMPLATE_VAR:
      r = jj_consume_token(OPEN_TEMPLATE_VAR);
      break;
    case OPEN_TEMPLATE2:
      r = jj_consume_token(OPEN_TEMPLATE2);
      break;
    case CLOSE_PENTUPLE_CURLY:
      r = jj_consume_token(CLOSE_PENTUPLE_CURLY);
      break;
    case CLOSE_TEMPLATE4:
      r = jj_consume_token(CLOSE_TEMPLATE4);
      break;
    case CLOSE_TEMPLATE_VAR:
      r = jj_consume_token(CLOSE_TEMPLATE_VAR);
      break;
    case CLOSE_TEMPLATE2:
      r = jj_consume_token(CLOSE_TEMPLATE2);
      break;
    case BOLD_ITALICS:
      r = jj_consume_token(BOLD_ITALICS);
      break;
    case BOLD:
      r = jj_consume_token(BOLD);
      break;
    case ITALICS:
      r = jj_consume_token(ITALICS);
      break;
    case BEGIN_EXTENSION:
      r = jj_consume_token(BEGIN_EXTENSION);
      break;
    case END_EXTENSION:
      r = jj_consume_token(END_EXTENSION);
      break;
    case BEGIN_COMMENT:
      r = jj_consume_token(BEGIN_COMMENT);
      break;
    case HEADING_END:
      r = jj_consume_token(HEADING_END);
      break;
    case COMMENT_TEXT:
      r = jj_consume_token(COMMENT_TEXT);
      break;
    case END_COMMENT:
      r = jj_consume_token(END_COMMENT);
      break;
    case EXTENSION_NAME:
      r = jj_consume_token(EXTENSION_NAME);
      break;
    case EXTENSION_ASSIGN:
      r = jj_consume_token(EXTENSION_ASSIGN);
      break;
    case EXTENSION_VALUE:
      r = jj_consume_token(EXTENSION_VALUE);
      break;
    case EXTENSION_SPACE:
      r = jj_consume_token(EXTENSION_SPACE);
      break;
    case EXTENSION_CLOSE:
      r = jj_consume_token(EXTENSION_CLOSE);
      break;
    case EXTENSION_CANCEL:
      r = jj_consume_token(EXTENSION_CANCEL);
      break;
    case APOSTROHE_TEXT:
      r = jj_consume_token(APOSTROHE_TEXT);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public void tableCellSeparator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TABLE_HEAD:
      jj_consume_token(TABLE_HEAD);
                      pushSimple("table", "row", "cell"); set("heading", "true");
      break;
    case TABLE_CELL:
      jj_consume_token(TABLE_CELL);
                      pushSimple("table", "row", "cell");
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void tableLineHead() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TABLE_HEAD_I:
      jj_consume_token(TABLE_HEAD_I);
                        pushSimple("table", "row", "cell"); set("heading", "true");
      break;
    case TABLE_CELL_I:
      jj_consume_token(TABLE_CELL_I);
                        pushSimple("table", "row", "cell");
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void cellText() throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LINE_TEXT:
      case OPEN_WIKI_LINK_RAW:
      case OPEN_WIKI_LINK:
      case OPEN_EXTERNAL_LINK:
      case CLOSE_WIKI_LINK:
      case CLOSE_EXTERNAL_LINK:
      case OPEN_PENTUPLE_CURLY:
      case OPEN_TEMPLATE4:
      case OPEN_TEMPLATE_VAR:
      case OPEN_TEMPLATE2:
      case CLOSE_PENTUPLE_CURLY:
      case CLOSE_TEMPLATE4:
      case CLOSE_TEMPLATE_VAR:
      case CLOSE_TEMPLATE2:
      case BOLD_ITALICS:
      case BOLD:
      case ITALICS:
      case BEGIN_EXTENSION:
      case END_EXTENSION:
      case BEGIN_COMMENT:
      case URL:
      case HEADING_END:
      case PIPE:
      case COMMENT_TEXT:
      case END_COMMENT:
      case EXTENSION_NAME:
      case EXTENSION_ASSIGN:
      case EXTENSION_VALUE:
      case EXTENSION_SPACE:
      case EXTENSION_CLOSE:
      case EXTENSION_CANCEL:
      case APOSTROHE_TEXT:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      textContentClasses();
    }
  }
